# Extended-C-Module

./: .gitignore  3rdPartyLibs.7z  CMakeLists.txt  ExtendedCModule_VS22.sln  LICENSE  README.md  ReleaseIt.bat  ReleaseIt.ps1
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  new-feature.yml
Libs/: ecm.algorithm.vcxproj  ecm.algorithm.vcxproj.filters  ecm.math.filters  ecm.math.vcxproj  ecm.math.vcxproj.filters  ecm.opengl.vcxproj  ecm.opengl.vcxproj.filters  ecm.vcxproj  ecm.vcxproj.filters  ecm.window.vcxproj  ecm.window.vcxproj.filters
Libs/ecm/: ecm.aps  ecm.rc  ecm.vcxproj  ecm.vcxproj.filters  ecm_api.h  ecm_configs.h  ecm_math.hpp  ecm_opengl.hpp  ecm_stdinc.h  ecm_types.hpp  ecm_window.hpp
Libs/ecm.algorithm/: ecm.algorithm.aps  ecm.algorithm.rc  ecm.algorithm.vcxproj  ecm.algorithm.vcxproj.filters
Libs/ecm.window/: ecm.window.rc  ecm.window.vcxproj  ecm.window.vcxproj.filters  resource.h
Libs/ecm.window/ecm/: ecm_window.hpp
Libs/ecm.window/ecm/window/: events.h  window.h
Libs/ecm.window/source/: window.cpp
Libs/ecm/algorithm/: random.h
Libs/ecm/container/: iterator.hpp  vector.hpp
Libs/ecm/ecm/: ecm.hpp  ecm_api.h  ecm_configs.h  ecm_console.h  ecm_math.hpp  ecm_types.hpp  ecm_version.h
Libs/ecm/ecm/container/: vector.hpp
Libs/ecm/ecm/math/: Vector2.h  matrix4x4.h  matrix4x4.hpp  matrix4x4.inl  vector2.hpp  vector2.inl  vector3.h  vector3.hpp  vector3.inl  vector4.h  vector4.inl
Libs/ecm/ecm/types/: color.h  id.h  stdtypes.h
Libs/ecm/math/: functions.hpp  functions.inl  functions_simd.hpp  functions_simd.inl  matrix.hpp  matrix4x4.hpp  matrix4x4.inl  vector.hpp  vector2.hpp  vector2.inl  vector3.hpp  vector3.inl  vector4.hpp  vector4.inl
Libs/ecm/math/ext/: vector_ext.hpp  vector_ext.inl
Libs/ecm/opengl/: glcontext.h
Libs/ecm/source/: color.cpp  console.cpp  id.cpp  version.cpp
Libs/ecm/source/math/: Vector2.cpp  matrix4x4.cpp  vector3.cpp  vector4.cpp
Libs/ecm/window/: context.h  context.hpp  context.inl  events.h  sdlrenderer.h  window.h
Libs/rsc/: ecm.algorithm.h  ecm.algorithm.rc  ecm.aps  ecm.h  ecm.math.h  ecm.math.rc  ecm.opengl.h  ecm.opengl.rc  ecm.rc  ecm.window.aps  ecm.window.rc
Libs/source/: color.cpp  console.cpp  version.cpp
Libs/source/algorithm/: random.cpp
Libs/source/math/: functions.cpp
Libs/source/opengl/: glcontext.cpp
Libs/source/win32/: dllmain_ecm.math.cpp  dllmain_ecm.opengl.cpp
Libs/source/window/: context.cpp  sdlrenderer.cpp  window.cpp
TestApps/Math/: Math.vcxproj  main.cpp
TestApps/TestApp/: TestApp.vcxproj  main.cpp
cmake/: Config.cmake  Macros.cmake
docs/: how-to-style-code.md
include/ECM/: ECM.h  ECM_api.h  ECM_color.h  ECM_configs.h  ECM_console.h  ECM_graphics.h  ECM_math.h  ECM_opengl.h  ECM_stdinc.h  ECM_stdtypes.h  ECM_version.h
include/ECM/graphics/: context.h  events.h  sdlrenderer.h  window.h
include/ECM/math/: functions.h  functions.inl  functions_simd.h  matrix.h  matrix4x4.h  matrix4x4.inl  vector.h  vector2.h  vector3.h  vector3.inl  vector4.h  vector4.inl
include/ECM/math/ext/: vector_ext.h  vector_ext.inl
include/ECM/opengl/: glad_gl4.6.h  glcontext.h
rsc/windows/: resource.rc.in
src/ECM/: CMakeLists.txt  color.cpp  console.cpp  version.cpp
src/ECM/graphics/: CMakeLists.txt  context.cpp  sdlrenderer.cpp  window.cpp
src/ECM/math/: CMakeLists.txt  functions_simd.cpp  vector2.cpp
src/ECM/opengl/: CMakeLists.txt  glad_gl4.6.cpp  glcontext.cpp
